--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
-                    href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+            <p>Chatbot page for <a href="https://skybotautomation.com" class="text-white">Skybot Automation</a>, by <a
+                    href="" class="text-white">@Skybot Automation</a>.</p>
         </footer>
     </div>
 
