--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </header>
 
         <main class="px-3">
-            <h1>Skybot Automation your page.</h1>
+            <h1>Skybot Automation - Chatbots of the Future.</h1>
             <p class="lead">Skybot Automation is a one-page template for building simple and beautiful home pages. Download, edit
                 the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
